--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -17,16 +17,21 @@ jobs:
     steps:
     - name: Get Code
       uses: actions/checkout@v4
+      
     - name: Use Node.js 20
       uses: actions/setup-node@v4
       with:
         node-version: 20
+
     - name: Setup Python
       uses: actions/setup-python@v5.6.0
       with:
         python-version: 3.12
 
-    - name: Test
+    - name: Install Deps
       run: |
-        node --version
-        python --version
+        python -m pip install --upgrade pip
+        python install -r requirements.txt
+
+    - name: Browser Init
+      run: rfbrowser init
