--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -31,7 +31,7 @@ jobs:
     - name: Install Deps
       run: |
         python -m pip install --upgrade pip
-        python install -r requirements.txt
+        pip install -r requirements.txt
 
     - name: Browser Init
       run: rfbrowser init
