--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -44,4 +44,11 @@ jobs:
       with:
         gh_access_token: ${{ secrets.GITHUB_TOKEN }}
         report_path: logs
+    
+    - name: Upload Report
+      uses: actions/upload-artifact@v4.6.2
+      with:
+        name: Test Report
+        path: logs
+
 
