--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -47,7 +47,7 @@ jobs:
       uses: actions/upload-artifact@v4.6.2
       if: always()
       with:
-        name: Test Report
+        name: Chrome Test Report 
         path: logs
 
   firefox:
@@ -90,5 +90,5 @@ jobs:
       uses: actions/upload-artifact@v4.6.2
       if: always()
       with:
-        name: Test Report
+        name: Firefox Test Report
         path: logs
